welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: 'while' expected but 'if' found.
  if (FoundBaggles<3) {droite();FoundBaggles=0}
  ^Poucet:8: error: '(' expected but '}' found.
} 
^